2025-11-30  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/number.cpp (is_valid_expression)
	(is_valid_term): Fix code style nits.  Parenthesize formally
	complex expressions.  Arrange equality comparisons to avoid
	inadvertent lvalue assignment.

2025-11-30  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/number.cpp (is_valid_term): Adjust wording of
	warnings in "syntax" category.

2025-11-30  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (warnscale_request): Fix code style
	nit.  Favor value constructors over C-style type casts.  Arrange
	equality comparisons to avoid inadvertent lvalue assignment.

2025-11-30  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (warnscale_request): In warning
	diagnostic in category "syntax", accurately describe the
	argument to the request even if it is something bizarre, instead
	of presenting the user with an empty pair of quotation marks.

	Fixes <https://savannah.gnu.org/bugs/?67747>.  Problem dates
	back to intoduction of `warnscale` request in commit 9993a881c1,
	5 May 2002.

2025-11-30  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (warnscale_request): Actually reset
	the computed `warn_scale` to `units_per_inch` when recovering
	from an invalid argument and telling the user we're reverting to
	inches.

	Fixes <https://savannah.gnu.org/bugs/?67748>.  Problem dates
	back to intoduction of `warnscale` request in commit 9993a881c1,
	5 May 2002.

2025-11-30  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/env.cpp: Explicitly construct the global
	constant `TAB_REPEAT_CHAR` as type `unsigned char`, because it
	is destined for comparison to input characters, instead of
	inheriting the type `char` from its literal initializer.

2025-11-30  G. Branden Robinson <g.branden.robinson@gmail.com>

	[troff]: Fix regression in syntax warning diagnostics introduced